--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
    margin: 0;
    border: 0;
    padding: 0;
+   box-sizing: border-box;
 }
 
 :root {
@@ -107,7 +108,8 @@ table *{
 }
 th, td {
    padding: 1.6rem 4rem;
-   width: 100%;
+   width: calc(90vw / 4);
+   max-width: 28rem;
    z-index: 2;
 }
 table thead {
