--- a/style.css
+++ b/style.css
@@ -19,11 +19,13 @@
    --color-tt-placeholder: #7C7C8A;
    --color-tt-table: #E1E1E6;
    --color-tt-button: #F75A68;
+   --color-tt-title-empty: #4E5455;
    --color-border-table:#4A808C;
 }
 body * {
    font-size: 1.6rem;
    color: var(--color-tt-primary);
+   font-family: 'Roboto', sans-serif;
 }
 a {
    text-decoration: none;
@@ -72,12 +74,14 @@ header {
    align-items: center;
    padding: 1.2rem 2.2rem;
    gap: .8rem;
-   font-size: 1.4rem;
    border-radius: .5rem;
    background-color: var(--bg-button);
    font-weight: 700;
    line-height: 2.4rem;
    text-transform: uppercase;
+}
+.search button span {
+   font-size: 1.4rem;
 }
 .search button:hover {
    background-color: var(--bg-button-hover);
@@ -89,6 +93,8 @@ header {
 
 table {
    width: 100%;
+   min-height: 30rem;
+   max-height: 42rem;
    background-color: var(--bg-table);
    text-align: left;
    border-collapse: collapse;
@@ -100,17 +106,14 @@ table {
    overflow: hidden;
    border: 1px solid var(--color-border-table);
 }
-table *{
+ table *{
    font-size: 1.5rem;
    line-height: 3rem;
    color: var(--color-tt-table);
    font-weight: 700;
 }
 th, td {
-   padding: 1.6rem 4rem;
-   width: calc(90vw / 4);
-   max-width: 28rem;
-   z-index: 2;
+   padding: 1.2rem 2rem;
 }
 table thead {
    background-color: var(--bg-tbody);
@@ -127,6 +130,29 @@ table thead th:first-child {
 }
 table thead th:last-child {
    border-top-right-radius: 1rem;
+}
+thead,
+#listFavorites tr {
+  table-layout: fixed;
+  width: 100%;
+  display: table;
+}
+#listFavorites {
+   display: block;
+   height: calc(42rem - 6.2rem);
+   overflow: overlay;
+}
+#listFavorites::-webkit-scrollbar {
+   width: .6rem;
+}
+#listFavorites::-webkit-scrollbar-track {
+   background: transparent;
+}
+ 
+#listFavorites::-webkit-scrollbar-thumb {
+   background: #4A808C;
+   border-radius: 10px;
+
 }
 td.user {
    display: flex;
@@ -146,36 +172,33 @@ td .remove {
    color: var(--color-tt-button);
    cursor: pointer;
 }
-table tr:nth-child(even) {
+#listFavorites tr:nth-child(even) {
    background-color: var(--bg-table-two);
    border-top: 1px solid var(--color-border-table);
    border-bottom: 1px solid var(--color-border-table);
 
 }
-tbody tr:last-child {
+#listFavorites tr:last-child {
    border-bottom-left-radius: 1rem;
    border-bottom-right-radius: 1rem;
 }
-table, tbody {
-   display: block;
+#listFavorites tr:hover {
+   box-shadow: inset 0 0 5px 1px #ADD8E6;
 }
-table {
-   max-height: 42rem;
-   display: block;
+
+#emptyList tr, #emptyList td {
+   width: 100%;
+   height: 100%;
 }
-tbody {
-   height: calc(42rem - 6.2rem);
-   overflow: overlay;
+#emptyList td {
+   display: flex;
+   align-items: center;
+   gap: 6rem;
+   justify-content: center;
 }
-tbody::-webkit-scrollbar {
-   width: .6rem;
-}
- 
-tbody::-webkit-scrollbar-track {
-   background: transparent;
-}
- 
-tbody::-webkit-scrollbar-thumb {
-   background: #4A808C;
-   border-radius: 10px;
+#emptyList td h1 {
+   font-size: 4rem;   
+   font-weight: 700;
+   line-height: 2.5rem;
+   color: var(--color-tt-title-empty);
 }
