--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ table {
    border-radius: 1rem;
    overflow: hidden;
    border: 1px solid var(--color-border-table);
+   box-shadow: 0 0 3px 1px #ADD8E6;
 }
  table *{
    font-size: 1.5rem;
@@ -181,7 +182,7 @@ td .remove {
    border-bottom-right-radius: 1rem;
 }
 .listFavorites tr:hover {
-   box-shadow: inset 0 0 5px 1px #ADD8E6;
+   box-shadow: inset 0 0 1px 1px #ADD8E6;
 }
 
 .emptyList tr, .emptyList td {
